Change hisilicon SDK to inherit android